--- a/school/templates/statistics.html
+++ b/school/templates/statistics.html
@@ -1,40 +1,106 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Statistics</title>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-        <script>
-            src="https://code.jquery.com/jquery-3.6.4.min.js"
-            integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-            crossorigin="anonymous">
-        </script>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div class="container">
-            <form id="filterForm">
-                <label for="year">Choose a year:</label>
-                <select name="year" id="year"></select>
-                <input type="submit" value="Load" name="_load">
-            </form>
+<html lang="en">
+  <head>
+    <title>Statistics</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css">
+  </head>
+  <body>
+    <div class="container">
+      <form id="filterForm">
+        <label for="year">Choose a year:</label>
+        <select name="year" id="year"></select>
+        <input type="submit" value="Load" name="_load">
+      </form>
+      <div class="row">
+        <div class="col-6">
+          <canvas id="salesChart"></canvas>
         </div>
-
-
-
-        <script src="" async defer></script>
-    </body>
+        <div class="col-6">
+          <canvas id="paymentSuccessChart"></canvas>
+        </div>
+        <div class="col-6">
+          <canvas id="spendPerCustomerChart"></canvas>
+        </div>
+        <div class="col-6">
+          <canvas id="paymentMethodChart"></canvas>
+        </div>
+      </div>
+      <script>
+        let salesCtx = document.getElementById("salesChart").getContext("2d");
+        let salesChart = new Chart(salesCtx, {
+          type: "bar",
+          options: {
+            responsive: true,
+            title: {
+              display: false,
+              text: ""
+            }
+          }
+        });
+        let spendPerCustomerCtx = document.getElementById("spendPerCustomerChart").getContext("2d");
+        let spendPerCustomerChart = new Chart(spendPerCustomerCtx, {
+          type: "line",
+          options: {
+            responsive: true,
+            title: {
+              display: false,
+              text: ""
+            }
+          }
+        });
+        let paymentSuccessCtx = document.getElementById("paymentSuccessChart").getContext("2d");
+        let paymentSuccessChart = new Chart(paymentSuccessCtx, {
+          type: "pie",
+          options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            aspectRatio: 1,
+            title: {
+              display: false,
+              text: ""
+            },
+            layout: {
+              padding: {
+                left: 0,
+                right: 0,
+                top: 0,
+                bottom: 25
+              }
+            }
+          }
+        });
+        let paymentMethodCtx = document.getElementById("paymentMethodChart").getContext("2d");
+        let paymentMethodChart = new Chart(paymentMethodCtx, {
+          type: "pie",
+          options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            aspectRatio: 1,
+            title: {
+              display: false,
+              text: ""
+            },
+            layout: {
+              padding: {
+                left: 0,
+                right: 0,
+                top: 0,
+                bottom: 25
+              }
+            }
+          }
+        });
+      </script>
+    </div>
+  </body>
 </html>
+
 
 <script>
     $(document).ready(function() {
@@ -52,7 +118,7 @@
           },
           error: () => console.log("Failed to fetch chart filter options!")
         });
-      });
+    });
       
       $("#filterForm").on("submit", (event) => {
         event.preventDefault();
@@ -91,6 +157,6 @@
 
 
       function loadAllCharts(year) {
-        loadChart(paymentMethodChart, `/grade-chart/${2022}/`);
+        loadChart(paymentMethodChart, `/grade-chart/${year}/`);
       }
 </script>    
